--- a/about-us.html
+++ b/about-us.html
@@ -122,28 +122,28 @@
 				<ul class="list list_center list_margin-20px hidden-box">
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="https://www.facebook.com/daxadsofficial" class="anim-slide js-pointer-small">
+							<a href="https://www.facebook.com/daxadsofficial"  target="_blank" class="anim-slide js-pointer-small">
 								<i class="fab fa-facebook-f"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="https://twitter.com/dax_ads" class="anim-slide tr-delay-02 js-pointer-small">
+							<a href="https://twitter.com/dax_ads"  target="_blank" class="anim-slide tr-delay-02 js-pointer-small">
 								<i class="fab fa-twitter"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="https://www.instagram.com/dax_ads/?hl=en" class="anim-slide tr-delay-04 js-pointer-small">
+							<a href="https://www.instagram.com/dax_ads/?hl=en"  target="_blank" class="anim-slide tr-delay-04 js-pointer-small">
 								<i class="fab fa-instagram"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" class="anim-slide tr-delay-06 js-pointer-small">
+							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="anim-slide tr-delay-06 js-pointer-small">
 								<i class="fab fa-linkedin"></i>
 							</a>
 						</div>
@@ -261,7 +261,7 @@
 							<div class="headline-xxxxs nav-title-color nav-reveal-anim js-nav-anim">Address</div>
 						</div>
 						<div class="nav-fade-anim js-nav-anim margin-top-10">
-							<a href="https://g.page/dax-ads-kannur?share" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">
+							<a href="https://g.page/dax-ads-kannur?share" target="_blank" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">
 								DAX #1st Floor <br>
 								Arafa Complex, Aarat Road,<br>
 								Kannur, Pin :670001
@@ -322,8 +322,8 @@
 									<h2 class="headline-s hidden-box">
 										<span class="anim-slide">Who We Are</span>
 									</h2>
-									<p class="body-text-s margin-top-20 anim-text-reveal tr-delay-02">
-										We build digital experiences and brands that people fall in love with. When I hear the buzz of the little world among the stalks, and grow familiar with the countless indescribable.
+									<p class="body-text-m margin-top-20 anim-text-reveal tr-delay-02">
+										We build digital experiences and brands that people fall in love with.<br> When I hear the buzz of the little world among the stalks, and grow familiar with the countless indescribable.
 									</p>
 								</div>
 							</div><!-- wo we are end -->
@@ -350,7 +350,7 @@
 									<!-- accordion__tab start -->
 									<div class="accordion__tab js-accordion-tab">
 										<div class="accordion__btn js-accordion-btn js-pointer-large">
-											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">Graphic Degigning</h6>
+											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">Graphic Designing</h6>
 										</div>
 										<div class="accordion__content js-accordion-content">
 											<p class="body-text-s">
@@ -362,7 +362,7 @@
 									<!-- accordion__tab start -->
 									<div class="accordion__tab js-accordion-tab">
 										<div class="accordion__btn js-accordion-btn js-pointer-large">
-											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">Web Design & Developoment</h6>
+											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">Web Design & Development</h6>
 										</div>
 										<div class="accordion__content js-accordion-content">
 											<p class="body-text-s">
@@ -374,7 +374,7 @@
 									<!-- accordion__tab start -->
 									<div class="accordion__tab js-accordion-tab">
 										<div class="accordion__btn js-accordion-btn js-pointer-large">
-											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">App Developed & Marketing</h6>
+											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">App Development & Marketing</h6>
 										</div>
 										<div class="accordion__content js-accordion-content">
 											<p class="body-text-s">
@@ -532,7 +532,7 @@
 									<a href="client.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
 								</li>
 								<li>
-									<a href="blog.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
+									<a href="blog_sliders.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
 								</li>
 								<li>
 									<a href="contact.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Contact</a>
@@ -558,7 +558,7 @@
 							<div class="column-l-r-margin-10">
 								<div class="headline-xxxxs">Address</div>
 								<div class="margin-top-10">
-									<a href="https://g.page/dax-ads-kannur?share" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">
+									<a href="https://g.page/dax-ads-kannur?share"  target="_blank" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">
 										DAX #1st Floor <br>
 										Arafa Complex , Aarat Road ,<br>
 										Kannur , Pin :670001
@@ -581,16 +581,16 @@
 					<!-- footer-social start -->
 					<ul class="footer-social-desktop-hidden list list_center padding-top-90">
 						<li class="list__item">
-							<a href="https://www.facebook.com/daxadsofficial" class="flip-btn js-pointer-small" data-text="Facebook">Facebook</a>
+							<a href="https://www.facebook.com/daxadsofficial"  target="_blank" class="flip-btn js-pointer-small" data-text="Facebook">Facebook</a>
 						</li>
 						<li class="list__item">
-							<a href="https://twitter.com/dax_ads" class="flip-btn js-pointer-small" data-text="twitter">twitter</a>
+							<a href="https://twitter.com/dax_ads"  target="_blank" class="flip-btn js-pointer-small" data-text="twitter">twitter</a>
 						</li>
 						<li class="list__item">
-							<a href="https://www.instagram.com/dax_ads/?hl=en" class="flip-btn js-pointer-small" data-text="Instagram">Instagram</a>
+							<a href="https://www.instagram.com/dax_ads/?hl=en"  target="_blank" class="flip-btn js-pointer-small" data-text="Instagram">Instagram</a>
 						</li>
 						<li class="list__item">
-							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" class="flip-btn js-pointer-small" data-text="Twitter">linkedin</a>
+							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="flip-btn js-pointer-small" data-text="Twitter">linkedin</a>
 						</li>
 					</ul><!-- footer-social end -->
 
