--- a/blog 1.html
+++ b/blog 1.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from www.nurseitmukaytegin.com/envato-templates/umaya/blog_sliders.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 05 Jan 2021 19:42:06 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
 	<meta property="og:url" content="https://thedaxads.com/"/>
 	<meta property="og:type" content="article"/>
@@ -121,28 +120,28 @@
 				<ul class="list list_center list_margin-20px hidden-box">
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="https://www.facebook.com/daxadsofficial" class="anim-slide js-pointer-small">
+							<a href="https://www.facebook.com/daxadsofficial"  target="_blank" class="anim-slide js-pointer-small">
 								<i class="fab fa-facebook-f"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="https://twitter.com/dax_ads" class="anim-slide tr-delay-02 js-pointer-small">
+							<a href="https://twitter.com/dax_ads"  target="_blank" class="anim-slide tr-delay-02 js-pointer-small">
 								<i class="fab fa-twitter"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="https://www.instagram.com/dax_ads/?hl=en" class="anim-slide tr-delay-04 js-pointer-small">
+							<a href="https://www.instagram.com/dax_ads/?hl=en"  target="_blank" class="anim-slide tr-delay-04 js-pointer-small">
 								<i class="fab fa-instagram"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" class="anim-slide tr-delay-06 js-pointer-small">
+							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="anim-slide tr-delay-06 js-pointer-small">
 								<i class="fab fa-linkedin"></i>
 							</a>
 						</div>
@@ -170,7 +169,7 @@
 					<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="blog.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
+					<a href="blog_sliders.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
 				</li>
 				<li class="landing-nav__btn">
 					<a href="contact.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
@@ -228,7 +227,7 @@
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="blog.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="blog_sliders.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Blog">Blog</span>
 						</a>
 					</li><!-- nav-btn-box end -->
@@ -296,11 +295,11 @@
 				<!-- bg-overlay -->
 				<div class="bg-overlay-black"></div>
 				<!-- pos-rel start -->
-				<div class="pos-rel flex-min-height-100vh">
+				<div class="pos-rel flex-min-height-10vh">
 					<div class="padding-top-bottom-120 width-100perc">
 						<!-- title start -->
 						<h2 class="headline-xxxxl text-center hidden-box after-preloader-anim">
-							<span class="anim-slide">Blog</span>
+							<!-- <span class="anim-slide">Blog</span> -->
 						</h2><!-- title end -->
 					</div>
 				</div><!-- pos-rel end -->
@@ -518,7 +517,7 @@
 									<a href="client.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
 								</li>
 								<li>
-									<a href="blog.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
+									<a href="blog_sliders.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
 								</li>
 								<li>
 									<a href="contact.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Contact</a>
@@ -544,7 +543,7 @@
 							<div class="column-l-r-margin-10">
 								<div class="headline-xxxxs">Address</div>
 								<div class="margin-top-10">
-									<a href="https://g.page/dax-ads-kannur?share" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">
+									<a href="https://g.page/dax-ads-kannur?share"  target="_blank" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">
 										DAX #1st Floor <br>
 										Arafa Complex , Aarat Road ,<br>
 										Kannur , Pin :670001
@@ -567,16 +566,16 @@
 					<!-- footer-social start -->
 					<ul class="footer-social-desktop-hidden list list_center padding-top-90">
 						<li class="list__item">
-							<a href="https://www.facebook.com/daxadsofficial" class="flip-btn js-pointer-small" data-text="Facebook">Facebook</a>
+							<a href="https://www.facebook.com/daxadsofficial"  target="_blank" class="flip-btn js-pointer-small" data-text="Facebook">Facebook</a>
 						</li>
 						<li class="list__item">
-							<a href="https://twitter.com/dax_ads" class="flip-btn js-pointer-small" data-text="twitter">twitter</a>
+							<a href="https://twitter.com/dax_ads"  target="_blank" class="flip-btn js-pointer-small" data-text="twitter">twitter</a>
 						</li>
 						<li class="list__item">
-							<a href="https://www.instagram.com/dax_ads/?hl=en" class="flip-btn js-pointer-small" data-text="Instagram">Instagram</a>
+							<a href="https://www.instagram.com/dax_ads/?hl=en"  target="_blank" class="flip-btn js-pointer-small" data-text="Instagram">Instagram</a>
 						</li>
 						<li class="list__item">
-							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" class="flip-btn js-pointer-small" data-text="Twitter">linkedin</a>
+							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="flip-btn js-pointer-small" data-text="Twitter">linkedin</a>
 						</li>
 					</ul><!-- footer-social end -->
 
@@ -597,5 +596,4 @@
 		<script src="assets/js/footer-reveal_init.js"></script>
 	</body>
 
-<!-- Mirrored from www.nurseitmukaytegin.com/envato-templates/umaya/blog_sliders.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 05 Jan 2021 19:42:13 GMT -->
 </html>
