--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from www.nurseitmukaytegin.com/envato-templates/umaya/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 05 Jan 2021 19:42:21 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
 	<meta property="og:url" content="https://thedaxads.com/"/>
 	<meta property="og:type" content="article"/>
@@ -118,32 +117,33 @@
 			</div><!-- header-contact end -->
 
 			<!-- header-social start -->
+			<!-- header-social start -->
 			<div class="header-social after-preloader-anim js-midnight-color js-headroom">
 				<ul class="list list_center list_margin-20px hidden-box">
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="https://www.facebook.com/daxadsofficial" class="anim-slide js-pointer-small">
+							<a href="https://www.facebook.com/daxadsofficial"  target="_blank" class="anim-slide js-pointer-small">
 								<i class="fab fa-facebook-f"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="https://twitter.com/dax_ads" class="anim-slide tr-delay-02 js-pointer-small">
+							<a href="https://twitter.com/dax_ads"  target="_blank" class="anim-slide tr-delay-02 js-pointer-small">
 								<i class="fab fa-twitter"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="https://www.instagram.com/dax_ads/?hl=en" class="anim-slide tr-delay-04 js-pointer-small">
+							<a href="https://www.instagram.com/dax_ads/?hl=en"  target="_blank" class="anim-slide tr-delay-04 js-pointer-small">
 								<i class="fab fa-instagram"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" class="anim-slide tr-delay-06 js-pointer-small">
+							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="anim-slide tr-delay-06 js-pointer-small">
 								<i class="fab fa-linkedin"></i>
 							</a>
 						</div>
@@ -171,7 +171,7 @@
 					<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="blog.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
+					<a href="blog_sliders.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
 				</li>
 				<li class="landing-nav__btn">
 					<a href="contact.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
@@ -229,7 +229,7 @@
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="blog.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="blog_sliders.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Blog">Blog</span>
 						</a>
 					</li><!-- nav-btn-box end -->
@@ -293,7 +293,7 @@
 		<!-- main start -->
 		<main class="js-animsition-overlay" data-animsition-overlay="true">
 			<!-- pos-rel start -->
-			<section id="up" class="pos-rel js-parallax-bg" style="background-image:url(assets/images/backgrounds/kal-visuals--UG2O1U2EfY-unsplash.jpg)">
+			<section id="up" class="pos-rel js-parallax-bg" style="background-image:url(https://images.pexels.com/photos/33999/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500)">
 				<!-- bg-overlay -->
 				<div class="bg-overlay-black"></div>
 				<!-- pos-rel start -->
@@ -373,7 +373,7 @@
 										</span>
 									</h6>
 									<div class="padding-top-10 anim-fade tr-delay-04">
-										<a href="https://g.page/dax-ads-kannur?share" class="subhead-xxs text-color-dadada text-hover-to-red js-pointer-small">Open in google maps</a>
+										<a href="https://g.page/dax-ads-kannur?share" target="_blank"  class="subhead-xxs text-color-dadada text-hover-to-red js-pointer-small">Open in google maps</a>
 									</div>
 								</div>
 							</div><!-- column end -->
@@ -398,16 +398,16 @@
 						<div class="padding-top-90">
 							<ul class="list list_row list_margin-30px js-scrollanim">
 								<li class="list__item anim-fade">
-									<a href="https://www.facebook.com/daxadsofficial" class="fill-btn text-color-979797 js-pointer-small" data-text="Facebook">Facebook</a>
+									<a href="https://www.facebook.com/daxadsofficial" target="_blank" class="fill-btn text-color-979797 js-pointer-small" data-text="Facebook">Facebook</a>
 								</li>
 								<li class="list__item anim-fade tr-delay-01">
-									<a href="https://twitter.com/dax_ads" class="fill-btn text-color-979797 js-pointer-small" data-text="Dribbble">twitter</a>
+									<a href="https://twitter.com/dax_ads" target="_blank"  class="fill-btn text-color-979797 js-pointer-small" data-text="Dribbble">twitter</a>
 								</li>
 								<li class="list__item anim-fade tr-delay-02">
-									<a href="https://www.instagram.com/dax_ads/?hl=en" class="fill-btn text-color-979797 js-pointer-small" data-text="Instagram">Instagram</a>
+									<a href="https://www.instagram.com/dax_ads/?hl=en" target="_blank"  class="fill-btn text-color-979797 js-pointer-small" data-text="Instagram">Instagram</a>
 								</li>
 								<li class="list__item anim-fade tr-delay-03">
-									<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" class="fill-btn text-color-979797 js-pointer-small" data-text="Youtube">linkedin</a>
+									<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" target="_blank"  class="fill-btn text-color-979797 js-pointer-small" data-text="Youtube">linkedin</a>
 								</li>
 								<!-- <li class="list__item anim-fade tr-delay-04">
 									<a href="#" class="fill-btn text-color-979797 js-pointer-small" data-text="Behance">Behance</a>
@@ -422,14 +422,14 @@
 			</section><!-- contact us end -->
 
 			<!-- form section start -->
-			<section class="pos-rel bg-img-cover" style="background-image:url(assets/images/backgrounds/architecture-buildings-city-fog-373965.jpg)">
+			<section class="pos-rel bg-img-cover" style="background-image:url(https://images.pexels.com/photos/1447255/pexels-photo-1447255.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)">
 				<!-- bg-overlay -->
 				<div class="bg-overlay-black"></div>
 				<!-- pos-rel start -->
 				<div class="pos-rel flex-min-height-100vh">
 					<!-- container start -->
 					<div class="container small padding-top-bottom-120 form-box">
-						<h4 class="headline-xxxxs text-center">Lets Get In Touch!</h4>
+						<h4 class="headline-xxs text-center">Lets Get In Touch!</h4>
 						<!-- flex-container start -->
 						<form action="#" method="post" name="formobrsv" id="send_form" class="flex-container padding-top-90">
 							<!-- column start -->
@@ -542,7 +542,7 @@
 									<a href="client.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
 								</li>
 								<li>
-									<a href="blog.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
+									<a href="blog_sliders.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
 								</li>
 								<li>
 									<a href="contact.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Contact</a>
@@ -568,7 +568,7 @@
 							<div class="column-l-r-margin-10">
 								<div class="headline-xxxxs">Address</div>
 								<div class="margin-top-10">
-									<a href="https://g.page/dax-ads-kannur?share" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">
+									<a href="https://g.page/dax-ads-kannur?share"  target="_blank" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">
 										DAX #1st Floor <br>
 										Arafa Complex , Aarat Road ,<br>
 										Kannur , Pin :670001
@@ -591,16 +591,16 @@
 					<!-- footer-social start -->
 					<ul class="footer-social-desktop-hidden list list_center padding-top-90">
 						<li class="list__item">
-							<a href="https://www.facebook.com/daxadsofficial" class="flip-btn js-pointer-small" data-text="Facebook">Facebook</a>
+							<a href="https://www.facebook.com/daxadsofficial"  target="_blank" class="flip-btn js-pointer-small" data-text="Facebook">Facebook</a>
 						</li>
 						<li class="list__item">
-							<a href="https://twitter.com/dax_ads" class="flip-btn js-pointer-small" data-text="twitter">twitter</a>
+							<a href="https://twitter.com/dax_ads"  target="_blank" class="flip-btn js-pointer-small" data-text="twitter">twitter</a>
 						</li>
 						<li class="list__item">
-							<a href="https://www.instagram.com/dax_ads/?hl=en" class="flip-btn js-pointer-small" data-text="Instagram">Instagram</a>
+							<a href="https://www.instagram.com/dax_ads/?hl=en"  target="_blank" class="flip-btn js-pointer-small" data-text="Instagram">Instagram</a>
 						</li>
 						<li class="list__item">
-							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" class="flip-btn js-pointer-small" data-text="Twitter">linkedin</a>
+							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="flip-btn js-pointer-small" data-text="Twitter">linkedin</a>
 						</li>
 					</ul><!-- footer-social end -->
 
@@ -621,5 +621,4 @@
 		<script src="assets/js/footer-reveal_init.js"></script>
 	</body>
 
-<!-- Mirrored from www.nurseitmukaytegin.com/envato-templates/umaya/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 05 Jan 2021 19:42:25 GMT -->
 </html>
