--- a/course 3.html
+++ b/course 3.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from www.nurseitmukaytegin.com/envato-templates/umaya/pages_about-us.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 05 Jan 2021 19:37:31 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
 	<meta property="og:url" content="https://thedaxads.com/"/>
 	<meta property="og:type" content="article"/>
@@ -118,32 +117,33 @@
 			</div><!-- header-contact end -->
 
 			<!-- header-social start -->
+			<!-- header-social start -->
 			<div class="header-social after-preloader-anim js-midnight-color js-headroom">
 				<ul class="list list_center list_margin-20px hidden-box">
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="https://www.facebook.com/daxadsofficial" class="anim-slide js-pointer-small">
+							<a href="https://www.facebook.com/daxadsofficial"  target="_blank" class="anim-slide js-pointer-small">
 								<i class="fab fa-facebook-f"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="https://twitter.com/dax_ads" class="anim-slide tr-delay-02 js-pointer-small">
+							<a href="https://twitter.com/dax_ads"  target="_blank" class="anim-slide tr-delay-02 js-pointer-small">
 								<i class="fab fa-twitter"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="https://www.instagram.com/dax_ads/?hl=en" class="anim-slide tr-delay-04 js-pointer-small">
+							<a href="https://www.instagram.com/dax_ads/?hl=en"  target="_blank" class="anim-slide tr-delay-04 js-pointer-small">
 								<i class="fab fa-instagram"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" class="anim-slide tr-delay-06 js-pointer-small">
+							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="anim-slide tr-delay-06 js-pointer-small">
 								<i class="fab fa-linkedin"></i>
 							</a>
 						</div>
@@ -171,7 +171,7 @@
 					<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="blog.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
+					<a href="blog_sliders.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
 				</li>
 				<li class="landing-nav__btn">
 					<a href="contact.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
@@ -229,7 +229,7 @@
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="blog.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="blog_sliders.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Blog">Blog</span>
 						</a>
 					</li><!-- nav-btn-box end -->
@@ -596,7 +596,7 @@
 									<a href="client.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
 								</li>
 								<li>
-									<a href="blog.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
+									<a href="blog_sliders.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
 								</li>
 								<li>
 									<a href="contact.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Contact</a>
@@ -675,5 +675,4 @@
 		<script src="assets/js/footer-reveal_init.js"></script>
 	</body>
 
-<!-- Mirrored from www.nurseitmukaytegin.com/envato-templates/umaya/pages_about-us.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 05 Jan 2021 19:38:31 GMT -->
 </html>
