--- a/academy.html
+++ b/academy.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from www.nurseitmukaytegin.com/envato-templates/umaya/landing_education.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 05 Jan 2021 19:46:42 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
 	<meta property="og:url" content="https://thedaxads.com/"/>
 	<meta property="og:type" content="article"/>
@@ -122,28 +121,28 @@
 				<ul class="list list_center list_margin-20px hidden-box">
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="https://www.facebook.com/daxadsofficial" class="anim-slide js-pointer-small">
+							<a href="https://www.facebook.com/daxadsofficial"  target="_blank" class="anim-slide js-pointer-small">
 								<i class="fab fa-facebook-f"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="https://twitter.com/dax_ads" class="anim-slide tr-delay-02 js-pointer-small">
+							<a href="https://twitter.com/dax_ads"  target="_blank" class="anim-slide tr-delay-02 js-pointer-small">
 								<i class="fab fa-twitter"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="https://www.instagram.com/dax_ads/?hl=en" class="anim-slide tr-delay-04 js-pointer-small">
+							<a href="https://www.instagram.com/dax_ads/?hl=en"  target="_blank" class="anim-slide tr-delay-04 js-pointer-small">
 								<i class="fab fa-instagram"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" class="anim-slide tr-delay-06 js-pointer-small">
+							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="anim-slide tr-delay-06 js-pointer-small">
 								<i class="fab fa-linkedin"></i>
 							</a>
 						</div>
@@ -171,7 +170,7 @@
 					<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="blog.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
+					<a href="blog_sliders.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
 				</li>
 				<li class="landing-nav__btn">
 					<a href="contact.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
@@ -229,7 +228,7 @@
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="blog.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="blog_sliders.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Blog">Blog</span>
 						</a>
 					</li><!-- nav-btn-box end -->
@@ -308,13 +307,13 @@
 							<div class="container small text-center padding-top-bottom-120">
 								<h2 class="headline-l">
 									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-03">Academy of Creativity </span>
+										<span class="anim-slide tr-delay-03">Academy of  </span>
 									</span>
+									<!-- <span class="hidden-box d-block">
+										<span class="anim-slide tr-delay-04"></span>
+									</span> -->
 									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-04"><span class="text-color-red">&</span></span>
-									</span>
-									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-04">Technology</span>
+										<span class="anim-slide tr-delay-04"> Creativity <span class="text-color-red">&</span> Technology</span>
 									</span>
 								</h2>
 								<!-- <p class="subhead-xs text-color-dadada margin-top-20 anim-fade tr-delay-06">Tote bag cornhole pork belly swag vexillologist godard.</p><br> -->
@@ -341,20 +340,23 @@
 							<div class="container small text-center padding-top-bottom-120">
 								<h2 class="headline-l">
 									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-03">Slow-carb Poke</span>
+										<span class="anim-slide tr-delay-03">Building a </span>
 									</span>
+									<!-- <span class="hidden-box d-block">
+										<span class="anim-slide tr-delay-04"><span class="text-color-red">a</span></span>
+									</span> -->
 									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-04">Authentic Salvia</span>
+										<span class="anim-slide tr-delay-04"> <span class="text-color-red">Bright Future</span></span>
 									</span>
 								</h2>
-								<p class="subhead-xs text-color-dadada margin-top-20 anim-fade tr-delay-06">Tote bag cornhole pork belly swag vexillologist godard.</p><br>
-								<div class="margin-top-30 anim-fade tr-delay-08">
+								<!-- <p class="subhead-xs text-color-dadada margin-top-20 anim-fade tr-delay-06">Tote bag cornhole pork belly swag vexillologist godard.</p><br> -->
+								<!-- <div class="margin-top-30 anim-fade tr-delay-08">
 									<a href="#" class="border-btn js-pointer-large">
 										<span class="border-btn__inner">Read more</span>
 										<span class="border-btn__lines-1"></span>
 										<span class="border-btn__lines-2"></span>
 									</a>
-								</div>
+								</div> -->
 							</div>
 						</div><!-- content end -->
 					</div><!-- swiper-slide end -->
@@ -362,7 +364,7 @@
 					<!-- swiper-slide start -->
 					<div class="swiper-slide">
 						<!-- slide-bg -->
-						<div class="js-parallax-slide-bg bg-img-cover" style="background-image:url(assets/images/backgrounds/happy-adult-woman-reading-book-with-interest-on-street-3772711.jpg)"></div>
+						<div class="js-parallax-slide-bg bg-img-cover" style="background-image:url(https://images.pexels.com/photos/3183154/pexels-photo-3183154.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)"></div>
 						<!-- bg-overlay -->
 						<div class="bg-overlay-black"></div>
 
@@ -371,20 +373,20 @@
 							<div class="container small text-center padding-top-bottom-120">
 								<h2 class="headline-l">
 									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-03">Skateboard Helvetica</span>
+										<span class="anim-slide tr-delay-03"></span>
 									</span>
 									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-04">Tousled Bicycle Rights</span>
+										<span class="anim-slide tr-delay-04"></span>
 									</span>
 								</h2>
-								<p class="subhead-xs text-color-dadada margin-top-20 anim-fade tr-delay-06">Tote bag cornhole pork belly swag vexillologist godard.</p><br>
+								<!-- <p class="subhead-xs text-color-dadada margin-top-20 anim-fade tr-delay-06">Tote bag cornhole pork belly swag vexillologist godard.</p><br>
 								<div class="margin-top-30 anim-fade tr-delay-08">
 									<a href="#" class="border-btn js-pointer-large">
 										<span class="border-btn__inner">Read more</span>
 										<span class="border-btn__lines-1"></span>
 										<span class="border-btn__lines-2"></span>
 									</a>
-								</div>
+								</div> -->
 							</div>
 						</div><!-- content end -->
 					</div><!-- swiper-slide end -->
@@ -570,7 +572,7 @@
 									<a href="client.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
 								</li>
 								<li>
-									<a href="blog.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
+									<a href="blog_sliders.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
 								</li>
 								<li>
 									<a href="contact.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Contact</a>
@@ -596,7 +598,7 @@
 							<div class="column-l-r-margin-10">
 								<div class="headline-xxxxs">Address</div>
 								<div class="margin-top-10">
-									<a href="https://g.page/dax-ads-kannur?share" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">
+									<a href="https://g.page/dax-ads-kannur?share"  target="_blank" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">
 										DAX #1st Floor <br>
 										Arafa Complex , Aarat Road ,<br>
 										Kannur , Pin :670001
@@ -619,16 +621,16 @@
 					<!-- footer-social start -->
 					<ul class="footer-social-desktop-hidden list list_center padding-top-90">
 						<li class="list__item">
-							<a href="https://www.facebook.com/daxadsofficial" class="flip-btn js-pointer-small" data-text="Facebook">Facebook</a>
+							<a href="https://www.facebook.com/daxadsofficial"  target="_blank" class="flip-btn js-pointer-small" data-text="Facebook">Facebook</a>
 						</li>
 						<li class="list__item">
-							<a href="https://twitter.com/dax_ads" class="flip-btn js-pointer-small" data-text="twitter">twitter</a>
+							<a href="https://twitter.com/dax_ads"  target="_blank" class="flip-btn js-pointer-small" data-text="twitter">twitter</a>
 						</li>
 						<li class="list__item">
-							<a href="https://www.instagram.com/dax_ads/?hl=en" class="flip-btn js-pointer-small" data-text="Instagram">Instagram</a>
+							<a href="https://www.instagram.com/dax_ads/?hl=en"  target="_blank" class="flip-btn js-pointer-small" data-text="Instagram">Instagram</a>
 						</li>
 						<li class="list__item">
-							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" class="flip-btn js-pointer-small" data-text="Twitter">linkedin</a>
+							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="flip-btn js-pointer-small" data-text="Twitter">linkedin</a>
 						</li>
 					</ul><!-- footer-social end -->
 
@@ -647,5 +649,4 @@
 		<script src="assets/js/main.js"></script>
 	</body>
 
-<!-- Mirrored from www.nurseitmukaytegin.com/envato-templates/umaya/landing_education.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 05 Jan 2021 19:49:43 GMT -->
 </html>
