--- a/services.html
+++ b/services.html
@@ -339,7 +339,7 @@
 							<div class="six-columns padding-top-30">
 								<div class="anim-img-reveal js-scrollanim">
 									<div class="anim-img-reveal__hidden">
-										<img class="anim-img-reveal__scale" src="https://images.unsplash.com/photo-1452421822248-d4c2b47f0c81?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDJ8fHxlbnwwfHx8&auto=format&fit=crop&w=500&q=60" alt="Graphic Designing">
+										<img class="anim-img-reveal__scale" src="https://images.pexels.com/photos/57690/pexels-photo-57690.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Graphic Designing">
 										<!-- <img class="anim-img-reveal__scale" src="assets/images/team/team_teachers/photo-of-man-using-smartphone-3183191.jpg" alt="Henry Matthews"> -->
 									</div>
 								</div>
@@ -474,7 +474,7 @@
 							<div class="six-columns padding-top-30">
 								<div class="anim-img-reveal js-scrollanim">
 									<div class="anim-img-reveal__hidden">
-										<img class="anim-img-reveal__scale" src="https://images.unsplash.com/photo-1477039181047-efb4357d01bd?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NXx8c29mdHdhcmUlMjBzb2x1dGlvbnxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Software Solutions">
+										<img class="anim-img-reveal__scale" src="https://images.unsplash.com/photo-1570215171323-4ec328f3f5fa?ixid=MXwxMjA3fDB8MHxzZWFyY2h8OHx8c29mdHdhcmV8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Software Solutions">
 									</div>
 								</div>
 							</div>
