--- a/course 3.html
+++ b/course 3.html
@@ -7,7 +7,7 @@
 	<meta property="og:type" content="article"/>
 	<meta property="og:title" content="Dax"/>
 	<meta property="og:description" content="Creative Agency"/>
-	<meta property="og:image" content="./assets/images/og-logo.png"/>
+	<meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="DAX">
