--- a/contact.html
+++ b/contact.html
@@ -293,7 +293,7 @@
 		<!-- main start -->
 		<main class="js-animsition-overlay" data-animsition-overlay="true">
 			<!-- pos-rel start -->
-			<section id="up" class="pos-rel js-parallax-bg" style="background-image:url(https://images.pexels.com/photos/33999/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500)">
+				<section id="up" class="pos-rel js-parallax-bg" style="background-image:url(assets/images/backgrounds/contact.jpg)">
 				<!-- bg-overlay -->
 				<div class="bg-overlay-black"></div>
 				<!-- pos-rel start -->
@@ -308,7 +308,7 @@
 								<span class="anim-slide tr-delay-01">Agency for</span>
 							</span>
 							<span class="hidden-box d-block">
-								<span class="anim-slide tr-delay-02">Your Businnes</span>
+								<span class="anim-slide tr-delay-02">Your Busines</span>
 							</span>
 						</h2><!-- title end -->
 						<p class="subhead-xs text-color-dadada margin-top-20 anim-fade tr-delay-04">Let's Start a project Together </p>
