--- a/about-us.html
+++ b/about-us.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from www.nurseitmukaytegin.com/envato-templates/umaya/pages_about-us.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 05 Jan 2021 19:37:31 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
 	<meta property="og:url" content="https://thedaxads.com/"/>
 	<meta property="og:type" content="article"/>
@@ -171,7 +170,7 @@
 					<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="blog.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
+					<a href="blog_sliders.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
 				</li>
 				<li class="landing-nav__btn">
 					<a href="contact.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
@@ -292,11 +291,26 @@
 
 		<!-- main start -->
 		<main class="js-animsition-overlay" data-animsition-overlay="true">
+			<!-- pos-rel start -->
+			<section id="up" class="pos-rel js-parallax-bg" style="background-image:url(assets/images/backgrounds/photo-of-person-using-laptop-3751699.jpg)">
+				<!-- bg-overlay -->
+				<div class="bg-overlay-black"></div>
+				<!-- pos-rel start -->
+				<div class="pos-rel flex-min-height-10vh">
+					<div class="padding-top-bottom-100 width-100perc">
+						<!-- title start -->
+						<h2 class="headline-xxxxl text-center hidden-box after-preloader-anim">
+							<!-- <span class="anim-slide">Blog</span> -->
+						</h2><!-- title end -->
+					</div>
+				</div><!-- pos-rel end -->
+			</section><!-- pos-rel end -->
+
 			<!-- page head start -->
 			<section id="up" class=" pos-rel anim-lines section-bg-dark-1">
 				<!-- lines-container start -->
-				<div class="lines-container pos-rel no-lines flex-min-height-100vh">
-					<div class="container padding-top-bottom-120 after-preloader-anim">
+				<div class=" text-center lines-container pos-rel no-lines flex-min-height-10vh">
+					<div class="container padding-top-bottom-100 after-preloader-anim">
 						<h3 class="headline-xs hidden-box">
 							<span class="anim-slide"><span class="text-color-red">WE ARE DIGITAL CREATIVE AGENCY</span></span>
 						</h3>
@@ -307,6 +321,58 @@
 				</div><!-- lines-container end -->
 			</section><!-- page head end -->
 
+			<section class="pos-rel section-bg-dark-1">
+				<!-- pos-rel start -->
+				<div class="pos-rel flex-min-height-100vh">
+					<!-- flex-container start -->
+					<div class="container flex-container padding-top-100 padding-bottom-120">
+						<!-- column start -->
+						<div class="four-columns column-100-100 padding-top-20">
+							<div class="column-l-r-margin-10-999">
+								<h2 class="headline-xxs text-color-white js-scrollanim">
+									<span class="hidden-box d-block">
+										<span class="anim-slide">Who We Are?</span>
+									</span>
+									<!-- <span class="hidden-box d-block">
+										<span class="anim-slide tr-delay-01">cold-pressed raw</span>
+									</span> -->
+								</h2>
+							</div>
+						</div><!-- column end -->
+
+						<!-- column start -->
+						<div class="eight-columns column-100-100 padding-top-20">
+							<div class="column-l-r-margin-10-999">
+								<p class="body-text-m text-color-white anim-text-reveal js-scrollanim">
+									We build digital experiences and brands that people fall in love with.<br> When I hear the buzz of the little world among the stalks, and grow familiar with the countless indescribable.
+								</p>
+							</div>
+						</div><!-- column end -->
+
+						<!-- column start -->
+						<div class="four-columns column-100-100 padding-top-60">
+							<a href="assets/images/projects/drone/01.jpg" class="column-l-r-margin-10-999 d-block js-pointer-zoom js-photo-popup">
+								<img src="assets/images/projects/drone/01.jpg" alt="project image">
+							</a>
+						</div><!-- column end -->
+
+						<!-- column start -->
+						<div class="four-columns column-100-100 padding-top-60">
+							<a href="assets/images/projects/drone/02.jpg" class="column-l-r-margin-10-999 d-block js-pointer-zoom js-photo-popup">
+								<img src="assets/images/projects/drone/02.jpg" alt="project image">
+							</a>
+						</div><!-- column end -->
+
+						<!-- column start -->
+						<div class="four-columns column-100-100 padding-top-60">
+							<a href="assets/images/projects/drone/03.jpg" class="column-l-r-margin-10-999 d-block js-pointer-zoom js-photo-popup">
+								<img src="assets/images/projects/drone/03.jpg" alt="project image">
+							</a>
+						</div><!-- column end -->
+					</div><!-- flex-container end -->
+				</div><!-- pos-rel end -->
+			</section><!-- pos-rel end -->
+
 			<!-- about start -->
 			<section class=" pos-rel section-bg-dark-2">
 				<!-- lines-container start -->
@@ -314,19 +380,87 @@
 					<!-- flex-container start -->
 					<div class="container flex-container reverse padding-top-30 padding-bottom-120">
 
+
 						<!-- column start -->
-						<div class="columns column-100-100">
-							<!-- wo we are start -->
-							<div class="padding-top-90">
+						<div class="five-columns column-100-100">
+							<div class="column-r-margin-40-999">
+								<!-- skills start -->
+								<div class="padding-top-90">
 								<div class="js-scrollanim">
 									<h2 class="headline-s hidden-box">
-										<span class="anim-slide">Who We Are</span>
+										<span class="anim-slide">Our Skills</span>
 									</h2>
-									<p class="body-text-m margin-top-20 anim-text-reveal tr-delay-02">
-										We build digital experiences and brands that people fall in love with.<br> When I hear the buzz of the little world among the stalks, and grow familiar with the countless indescribable.
-									</p>
+									<!-- list start -->
+									<ul class="list list_margin-20px margin-top-30">
+										<!-- progress-box start -->
+										<li class="list__item progress-bar">
+											<div class="headline-xxxxs anim-text-fill" data-text="Front-end Development">Front-end Development</div>
+											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-02" data-text="100%">100%</div>
+											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="100%">
+												<div class="progress-bar__line js-progress-animate"></div>
+												<div class="progress-bar__line red js-progress-animate tr-delay-01"></div>
+											</div>
+										</li><!-- progress-box end -->
+
+										<!-- progress-box start -->
+										<li class="list__item progress-bar">
+											<div class="headline-xxxxs anim-text-fill tr-delay-02" data-text="Back-end Development">Back-end Development</div>
+											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-04" data-text="90%">90%</div>
+											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="90%">
+												<div class="progress-bar__line js-progress-animate tr-delay-02"></div>
+												<div class="progress-bar__line red js-progress-animate tr-delay-03"></div>
+											</div>
+										</li><!-- progress-box end -->
+
+										<!-- progress-box start -->
+										<li class="list__item progress-bar">
+											<div class="headline-xxxxs anim-text-fill tr-delay-01" data-text="Graphic Design">Graphic Design</div>
+											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-03" data-text="99%">99%</div>
+											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="99%">
+												<div class="progress-bar__line js-progress-animate tr-delay-01"></div>
+												<div class="progress-bar__line red js-progress-animate tr-delay-02"></div>
+											</div>
+										</li><!-- progress-box end -->
+
+										<!-- progress-box start -->
+										<li class="list__item progress-bar">
+											<div class="headline-xxxxs anim-text-fill tr-delay-03" data-text="UI/UX Design">UI/UX Design</div>
+											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-05" data-text="100%">100%</div>
+											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="100%">
+												<div class="progress-bar__line js-progress-animate tr-delay-03"></div>
+												<div class="progress-bar__line red js-progress-animate tr-delay-04"></div>
+											</div>
+										</li><!-- progress-box end -->
+
+										<!-- progress-box start -->
+										<li class="list__item progress-bar">
+											<div class="headline-xxxxs anim-text-fill tr-delay-04" data-text="Motion Design">Motion Design</div>
+											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-06" data-text="86%">86%</div>
+											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="86%">
+												<div class="progress-bar__line js-progress-animate tr-delay-04"></div>
+												<div class="progress-bar__line red js-progress-animate tr-delay-05"></div>
+											</div>
+										</li><!-- progress-box end -->
+
+										<!-- progress-box start -->
+										<li class="list__item progress-bar">
+											<div class="headline-xxxxs anim-text-fill tr-delay-05" data-text="Brand Strategy">Brand Strategy</div>
+											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-07" data-text="93%">93%</div>
+											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="93%">
+												<div class="progress-bar__line js-progress-animate tr-delay-05"></div>
+												<div class="progress-bar__line red js-progress-animate tr-delay-06"></div>
+											</div>
+										</li><!-- progress-box end -->
+
+									</ul><!-- list end -->
 								</div>
-							</div><!-- wo we are end -->
+							</div><!-- skills end -->
+							</div>
+
+						</div><!-- column end -->
+
+						<!-- column start -->
+						<div class="six-columns column-100-100">
 
 							<!-- what we do start -->
 							<div class="padding-top-90">
@@ -408,80 +542,8 @@
 
 								</div><!-- accordion end -->
 							</div><!-- what we do end -->
-
-							<!-- skills start -->
-							<div class="padding-top-90">
-								<div class="js-scrollanim">
-									<h2 class="headline-s hidden-box">
-										<span class="anim-slide">Our Skills</span>
-									</h2>
-									<!-- list start -->
-									<ul class="list list_margin-20px margin-top-30">
-										<!-- progress-box start -->
-										<li class="list__item progress-bar">
-											<div class="headline-xxxxs anim-text-fill" data-text="Front-end Development">Front-end Development</div>
-											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-02" data-text="100%">100%</div>
-											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="100%">
-												<div class="progress-bar__line js-progress-animate"></div>
-												<div class="progress-bar__line red js-progress-animate tr-delay-01"></div>
-											</div>
-										</li><!-- progress-box end -->
-
-										<!-- progress-box start -->
-										<li class="list__item progress-bar">
-											<div class="headline-xxxxs anim-text-fill tr-delay-02" data-text="Back-end Development">Back-end Development</div>
-											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-04" data-text="90%">90%</div>
-											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="90%">
-												<div class="progress-bar__line js-progress-animate tr-delay-02"></div>
-												<div class="progress-bar__line red js-progress-animate tr-delay-03"></div>
-											</div>
-										</li><!-- progress-box end -->
-
-										<!-- progress-box start -->
-										<li class="list__item progress-bar">
-											<div class="headline-xxxxs anim-text-fill tr-delay-01" data-text="Graphic Design">Graphic Design</div>
-											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-03" data-text="99%">99%</div>
-											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="99%">
-												<div class="progress-bar__line js-progress-animate tr-delay-01"></div>
-												<div class="progress-bar__line red js-progress-animate tr-delay-02"></div>
-											</div>
-										</li><!-- progress-box end -->
-
-
-
-										<!-- progress-box start -->
-										<li class="list__item progress-bar">
-											<div class="headline-xxxxs anim-text-fill tr-delay-03" data-text="UI/UX Design">UI/UX Design</div>
-											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-05" data-text="100%">100%</div>
-											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="100%">
-												<div class="progress-bar__line js-progress-animate tr-delay-03"></div>
-												<div class="progress-bar__line red js-progress-animate tr-delay-04"></div>
-											</div>
-										</li><!-- progress-box end -->
-
-										<!-- progress-box start -->
-										<li class="list__item progress-bar">
-											<div class="headline-xxxxs anim-text-fill tr-delay-04" data-text="Motion Design">Motion Design</div>
-											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-06" data-text="86%">86%</div>
-											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="86%">
-												<div class="progress-bar__line js-progress-animate tr-delay-04"></div>
-												<div class="progress-bar__line red js-progress-animate tr-delay-05"></div>
-											</div>
-										</li><!-- progress-box end -->
-
-										<!-- progress-box start -->
-										<li class="list__item progress-bar">
-											<div class="headline-xxxxs anim-text-fill tr-delay-05" data-text="Brand Strategy">Brand Strategy</div>
-											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-07" data-text="93%">93%</div>
-											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="93%">
-												<div class="progress-bar__line js-progress-animate tr-delay-05"></div>
-												<div class="progress-bar__line red js-progress-animate tr-delay-06"></div>
-											</div>
-										</li><!-- progress-box end -->
-									</ul><!-- list end -->
-								</div>
-							</div><!-- skills end -->
 						</div><!-- column end -->
+
 					</div><!-- flex-container end -->
 				</div><!-- lines-container end -->
 			</section><!-- about end -->
