--- a/academy.html
+++ b/academy.html
@@ -7,7 +7,7 @@
 	<meta property="og:type" content="article"/>
 	<meta property="og:title" content="Dax"/>
 	<meta property="og:description" content="Creative Agency"/>
-	<meta property="og:image" content="assets/images/apple-touch-icon-114x114-white.png"/>
+	<meta property="og:image" content="./assets/images/og-logo.png"/>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="DAX">
