--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
 						<!-- blog-entry start -->
 						<article class="flex-container flex-align-center padding-top-60">
 							<div class="six-columns padding-top-30">
-								<a href="blog 1.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
+								<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
 											<img class="img-hover-scale" src="https://images.unsplash.com/photo-1514580426463-fd77dc4d0672?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTB8fGRpZ2l0YWx8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Post">
@@ -814,16 +814,16 @@
 								<div class="column-l-margin-40 anim-fade js-scrollanim">
 									<ul class="list list_row list_margin-30px">
 										<li class="list__item">
-											<a href="blog 1.html" class="subhead-xs text-color-888888 text-hover-to-red js-pointer-small">By: Abdul Wasith</a>
+											<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="subhead-xs text-color-888888 text-hover-to-red js-pointer-small">By: Abdul Wasith</a>
 										</li>
 										<!-- <li class="list__item">
 											<a href="#" class="subhead-xxs text-color-888888 text-hover-to-red js-pointer-small">In: Art</a>
 										</li> -->
 										<li class="list__item">
-											<a href="blog 1.html" class="subhead-xs text-color-888888 text-hover-to-red js-pointer-small">18 September 2020</a>
+											<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="subhead-xs text-color-888888 text-hover-to-red js-pointer-small">18 September 2020</a>
 										</li>
 									</ul>
-									<a href="blog 1.html" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
+									<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
 										<h3 class="headline-xs text-color-black">
 											Three Essential Digital Marketing<br>
 											Channels In 2020
@@ -831,7 +831,7 @@
 										<p class="body-text-s margin-top-20 text-color-black">
 											2020 has been a challenging year for marketing professionals and agencies would be an understatement. While some companies and industries are affected more than that, every marketer...</p>
 									</a>
-									<a href="blog 1.html" class="skew-btn js-pointer-large js-animsition-link">
+									<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="skew-btn js-pointer-large js-animsition-link">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content text-color-black">Continue reading</span>
 											<span class="skew-btn__arrow black"></span>
